--- a/src/components/DesktopHeader/DesktopHeader.css
+++ b/src/components/DesktopHeader/DesktopHeader.css
@@ -14,6 +14,7 @@
   letter-spacing: 4px;
   text-align: center;
   color: #64eebc;
+  margin-bottom: 0;
 }
 .desktop-header__logo-part2 {
   font-weight: 300;
