--- a/src/components/DesktopHeader/DesktopHeader.scss
+++ b/src/components/DesktopHeader/DesktopHeader.scss
@@ -18,6 +18,7 @@ $desktop-header-padding-top: 32px;
     letter-spacing: 4px;
     text-align: center;
     color: $primary-color;
+    margin-bottom: 0;
 
     &-part2 {
       font-weight: 300;
