--- a/src/components/AppContainer/AppContainer.css
+++ b/src/components/AppContainer/AppContainer.css
@@ -31,7 +31,7 @@
   width: 100%;
   height: 60vh;
   background-size: cover;
-  background-position: center;
+  background-position: top;
   position: absolute;
   top: 0;
   left: 0;
@@ -47,8 +47,8 @@
 
 @media screen and (min-width: 900px) {
   .app-container__background {
-    height: 65vh;
-    background-position: center;
+    height: 68vh;
+    background-position: top;
   }
 }
 @media screen and (min-width: 1366px) {
