--- a/src/components/AppContainer/AppContainer.scss
+++ b/src/components/AppContainer/AppContainer.scss
@@ -36,7 +36,7 @@ $linear-gradient: linear-gradient(180deg, rgba(36, 36, 36, 0) 0%, #242424 100%);
     width: 100%;
     height: 60vh;
     background-size: cover;
-    background-position: center;
+    background-position: top;
     position: absolute;
     top: 0;
     left: 0;
@@ -54,8 +54,8 @@ $linear-gradient: linear-gradient(180deg, rgba(36, 36, 36, 0) 0%, #242424 100%);
 
 @media screen and (min-width: 900px) {
   .app-container__background {
-    height: 65vh;
-    background-position: center;
+    height: 68vh;
+    background-position: top;
   }
 }
 
